Complete app with all features and bug fixes
Complete app with all features and bug fixes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Poker Club - Telegram Mini App</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -190,8 +190,8 @@
                 <div class="section-header">
                     <h2>Рейтинг игроков</h2>
                     <div class="rating-period">
-                        <button class="period-btn active" data-period="month">Месяц</button>
-                        <button class="period-btn" data-period="all">Все время</button>
+                        <button class="period-btn active" data-period="month" onclick="switchRatingPeriod('month')">Месяц</button>
+                        <button class="period-btn" data-period="all" onclick="switchRatingPeriod('all')">Все время</button>
                     </div>
                 </div>
 
@@ -210,11 +210,15 @@
             <!-- Profile Tab -->
             <div class="tab-content" id="profile">
                 <div class="profile-header">
-                    <div class="profile-avatar" id="profileAvatar">👤</div>
+                    <div class="profile-avatar" id="profileAvatar" onclick="showAvatarModal()">👤</div>
                     <div class="profile-info">
                         <h2 id="profileName">Игрок</h2>
                         <p id="profileRank">Ранг: Новичок</p>
                         <p id="profileNickname" style="display: none;">Ник: <span id="userNickname">-</span></p>
+                        <button class="change-avatar-btn" onclick="showAvatarModal()">
+                            <i class="fas fa-camera"></i>
+                            <span>Изменить аватарку</span>
+                        </button>
                     </div>
                 </div>
 
@@ -409,6 +413,44 @@
                     <div class="user-profile-details" id="userProfileDetails">
                         <!-- Детали профиля будут загружены динамически -->
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Avatar Selection Modal -->
+        <div class="modal" id="avatarModal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Выберите аватарку</h2>
+                    <button class="close-btn" onclick="closeModal('avatarModal')">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="avatar-upload">
+                        <div class="avatar-preview" id="avatarPreview">👤</div>
+                        <button class="avatar-upload-btn" onclick="uploadAvatar()">
+                            <i class="fas fa-camera"></i>
+                            <span>Загрузить фото</span>
+                        </button>
+                    </div>
+                    <h3>Или выберите эмодзи:</h3>
+                    <div class="avatar-options" id="avatarOptions">
+                        <div class="avatar-option" onclick="selectEmojiAvatar('👤')">👤</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('🎭')">🎭</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('🎪')">🎪</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('🎨')">🎨</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('🎯')">🎯</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('🎲')">🎲</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('🃏')">🃏</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('🎴')">🎴</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('👑')">👑</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('🏆')">🏆</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('🥇')">🥇</div>
+                        <div class="avatar-option" onclick="selectEmojiAvatar('⭐')">⭐</div>
+                    </div>
+                    <button class="create-btn" onclick="saveAvatar()">
+                        <i class="fas fa-save"></i>
+                        <span>Сохранить аватарку</span>
+                    </button>
                 </div>
             </div>
         </div>
