Fixed all bugs and added Telegram integration
Fixed all bugs and added Telegram integration

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </div>
 
                 <div class="admin-stats">
-                    <div class="admin-stat-card">
+                    <div class="admin-stat-card clickable" onclick="showAllUsers()">
                         <div class="stat-icon">👥</div>
                         <div class="stat-info">
                             <div class="stat-value" id="totalUsers">0</div>
