--- a/index.html
+++ b/index.html
@@ -303,6 +303,14 @@
                         <i class="fas fa-trophy"></i>
                         <span>Управление турнирами</span>
                     </button>
+                    <button class="admin-btn" onclick="forceDataSync()">
+                        <i class="fas fa-sync-alt"></i>
+                        <span>Синхронизировать данные</span>
+                    </button>
+                    <button class="admin-btn" onclick="createDemoData()">
+                        <i class="fas fa-users-cog"></i>
+                        <span>Создать демо-данные</span>
+                    </button>
                 </div>
             </div>
         </main>
