--- a/index.html
+++ b/index.html
@@ -267,21 +267,21 @@
                 </div>
 
                 <div class="admin-stats">
-                    <div class="admin-stat-card">
+                    <div class="admin-stat-card" onclick="showUsersList()" title="Нажмите, чтобы увидеть всех пользователей">
                         <div class="stat-icon">👥</div>
                         <div class="stat-info">
                             <div class="stat-value" id="totalUsers">0</div>
                             <div class="stat-label">Пользователей</div>
                         </div>
                     </div>
-                    <div class="admin-stat-card">
+                    <div class="admin-stat-card" onclick="showTournamentsManagement()" title="Нажмите, чтобы увидеть все турниры">
                         <div class="stat-icon">🏆</div>
                         <div class="stat-info">
                             <div class="stat-value" id="totalTournaments">0</div>
                             <div class="stat-label">Турниров</div>
                         </div>
                     </div>
-                    <div class="admin-stat-card">
+                    <div class="admin-stat-card" onclick="showActivePlayers()" title="Нажмите, чтобы увидеть активных игроков">
                         <div class="stat-icon">🎮</div>
                         <div class="stat-info">
                             <div class="stat-value" id="activeGames">0</div>
