--- a/index.html
+++ b/index.html
@@ -261,6 +261,10 @@
                 </div>
 
                 <div class="profile-actions">
+                    <button class="action-btn" onclick="toggleTheme()">
+                        <i class="fas fa-adjust" id="themeIcon"></i>
+                        <span id="themeText">Переключить тему</span>
+                    </button>
                     <button class="action-btn" onclick="logout()">
                         <i class="fas fa-sign-out-alt"></i>
                         <span>Выйти</span>
