--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
                         <input type="text" id="tournamentName" placeholder="Введите название турнира">
                     </div>
                     <div class="form-group">
-                        <label for="tournamentDate">Дата и время:</label>
-                        <input type="datetime-local" id="tournamentDate">
+                        <label for="tournamentDescription">Описание:</label>
+                        <textarea id="tournamentDescription" placeholder="Описание турнира" rows="3"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="tournamentDuration">Длительность (часы):</label>
